tests/programs/common/errors/err_undefined_variable.cm
// エラーケース: 未定義変数の使用
import std::io::println;
int main() {
    println(x);
    // xは定義されていない
    return 0;
}
